--- a/module_1/pom.xml
+++ b/module_1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.com.alevel</groupId>
-    <artifactId>hm_4</artifactId>
+    <artifactId>module_1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -24,7 +24,7 @@
     </dependencies>
 
     <build>
-        <finalName>Main</finalName>
+        <finalName>finish_oop</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
