--- a/hm_10/pom.xml
+++ b/hm_10/pom.xml
@@ -13,26 +13,15 @@
         <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
         <commons-lang3.version>3.13.0</commons-lang3.version>
         <commons-io.version>2.13.0</commons-io.version>
-        <opencsv.version>2.4</opencsv.version>
-        <gson.version>2.10.1</gson.version>
         <java.version>17</java.version>
+        <mysql-connector-j.version>8.0.33</mysql-connector-j.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>au.com.bytecode</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>${opencsv.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql-connector-j.version}</version>
         </dependency>
     </dependencies>
 
@@ -62,7 +51,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ua.com.alevel.Main</mainClass>
+                                    <mainClass>ua.com.alevel.CrudSqlMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
