--- a/hm_7/pom.xml
+++ b/hm_7/pom.xml
@@ -49,7 +49,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ua.com.alevel.Main</mainClass>
+                                    <mainClass>ua.com.alevel.CrudSqlMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
