--- a/hm-10/pom.xml
+++ b/hm-10/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
 
     <build>
-        <finalName>main</finalName>
+        <finalName>SqlCrudMain</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
